# 7-DoF_Robot_Arm

./: CMakeLists.txt  README.md  package.xml
config/: arm_control_gazebo.yaml
launch/: robot_arm_v1.launch  robot_control_example.launch  view_robot_arm.launch
src/: test_robot_joints.py
src/ik/: ik.h  marvin_arm.py  test_robot_joints.py
urdf/: robot_arm.urdf  robot_arm.xacro  robot_arm1.xacro
